[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "home-assistant-vantage"
version = "0.14.3"
description = "Home Assistant integration for Vantage InFusion home automation controllers."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "James Smith", email = "james@loopj.com" }]
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "aiovantage==0.22.5",
    "homeassistant==2024.12.3",
    "colorlog==6.9.0",
]

[project.optional-dependencies]
dev = ["pyright==1.1.400", "ruff==0.13.1", "bumpver==2024.1130"]

[tool.hatch.build.targets.wheel]
include = ["custom_components/vantage"]

[tool.ruff.lint]
select = [
    "B007",    # Loop control variable {name} not used within loop body
    "B014",    # Exception handler with duplicate exception
    "C",       # complexity
    "D",       # docstrings
    "E",       # pycodestyle
    "F",       # pyflakes/autoflake
    "ICN001",  # import concentions; {name} should be imported as {asname}
    "PGH004",  # Use specific rule codes when using noqa
    "PLC0414", # Useless import alias. Import alias does not rename original package.
    "SIM105",  # Use contextlib.suppress({exception}) instead of try-except-pass
    "SIM117",  # Merge with-statements that use the same scope
    "SIM118",  # Use {key} in {dict} instead of {key} in {dict}.keys()
    "SIM201",  # Use {left} != {right} instead of not {left} == {right}
    "SIM212",  # Use {a} if {a} else {b} instead of {b} if not {a} else {a}
    "SIM300",  # Yoda conditions. Use 'age == 42' instead of '42 == age'.
    "SIM401",  # Use get from dict with default instead of an if block
    "T20",     # flake8-print
    "TRY004",  # Prefer TypeError exception for invalid type
    "RUF006",  # Store a reference to the return value of asyncio.create_task
    "UP",      # pyupgrade
    "W",       # pycodestyle
]

ignore = [
    "D202", # No blank lines allowed after function docstring
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "D404", # First word of the docstring should not be This
    "D406", # Section name should end with a newline
    "D407", # Section name underlining
    "D411", # Missing blank line before section
    "E501", # line too long
    "E731", # do not assign a lambda expression, use a def
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["homeassistant"]
combine-as-imports = true

[tool.pyright]
typeCheckingMode = "strict"
reportPrivateImportUsage = "none"
reportIncompatibleVariableOverride = "none"
reportUnnecessaryIsInstance = false

[tool.bumpver]
current_version = "0.14.3"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"custom_components/vantage/manifest.json" = ['"version": "{version}"']

# Uncomment to enable editable mode for aiovantage
# [tool.uv.sources]
# aiovantage = { path = "../aiovantage", editable = true }
